Cambio de contraseña y manuales de usuario

--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -89,7 +89,7 @@
         <div>
 
           <div style="margin: 10px; text-align: center;">
-            <img class="img img-responsive img-thumbnail" src="{{ canario.url_img }}">
+            <img class="img img-fluid img-thumbnail" src="{{ canario.url_img }}">
           </div>
         </div>
       </div>
