--- a/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
+++ b/src/app/GrupoGeneral/info-bar-user/info-bar-user.component.html
@@ -2,7 +2,7 @@
 
   <!-- Imagen -->
   <div class="col col-md-3 col-lg-2 d-none d-md-flex justify-content-center">
-    <img class="img img-responsive"
+    <img class="img img-fluid"
       style="max-height: 10rem; margin: 1rem; ;" src="../../assets/img/icons/UsersAvatar/user.png">
   </div>
 
@@ -24,7 +24,7 @@
 
     <!-- Imagen -->
     <div class="col col-md-3 col-lg-2 d-none d-md-flex justify-content-center">
-      <img class="img img-responsive"
+      <img class="img img-fluid"
         style="max-height: 10rem; min-height: 8rem; margin: 1rem; ;" src="../../assets/img/icons/UsersAvatar/mod.png">
     </div>
 
@@ -46,7 +46,7 @@
 
     <!-- Imagen -->
     <div class="col col-md-3 col-lg-2 d-none d-md-flex justify-content-center">
-      <img class="img img-responsive"
+      <img class="img img-fluid"
         style="max-height: 10rem; min-height: 8rem; margin: 1rem;" src="../../assets/img/icons/UsersAvatar/admin.png">
     </div>
 
