--- a/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
+++ b/src/app/GrupoPanelUsuario/action-buttons-mod/action-buttons-mod.component.html
@@ -1,13 +1,17 @@
-<div class="container-fluid mt-3 d-sm-flex">
+<div class="container-fluid mt-3 d-sm-flex flex-wrap">
   <!-- Boton Administrar usuarios -->
-  <a routerLink="./adminUser" class="col col-sm-6 modAdmAction">
+  <a routerLink="./adminUser" class="col col-sm-4 modAdmAction">
     <h2>Administrar usuarios</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminModUser.png">
   </a>
   <!-- Boton administrar publicaciones -->
-  <a routerLink="./adminPost" class="col col-sm-6 modAdmAction">
+  <a routerLink="./adminPost" class="col col-sm-4 modAdmAction">
     <h2>Administrar publicaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminPost.png">
   </a>
-
+  <!-- Boton config -->
+  <a routerLink="./config" class="col col-sm-4 modAdmAction">
+    <h2>Configuración</h2>
+    <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/config.png">
+  </a>
 </div>
