--- a/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
+++ b/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
@@ -10,7 +10,7 @@
 
 <!-- Botones usuario -->
 <div class="container-fluid p-0" *ngIf="user.rol=='U'; else noUser">
-
+  <app-action-buttons-usr class="col p-0"></app-action-buttons-usr>
 </div>
 
 <!-- Botones moderador -->
