--- a/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
@@ -21,7 +21,7 @@
     <!--Campos del formulario-->
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
-        <input class="form-control" formControlName="name" [(ngModel)]="user.name" type="text" placeholder="Nombre de moderador..." value="{{ user.name }}">
+        <input class="form-control" formControlName="name" [(ngModel)]="user.name" type="text" placeholder="Nombre de usuario..." value="{{ user.name }}">
         <div *ngIf="form.get('name')!.invalid && form.get('name')!.errors && (form.get('name')!.dirty || form.get('name')!.touched)">
           <small class="text-danger" *ngIf="form.get('name')!.hasError('required')">Debe indicar un nombre</small>
           <small class="text-danger" *ngIf="form.get('name')!.hasError('maxlength')">El nombre debe tener menos de 20 caracteres</small>
