--- a/src/app/GrupoGeneral/error-page/error-page.component.html
+++ b/src/app/GrupoGeneral/error-page/error-page.component.html
@@ -1,11 +1,3 @@
-<div class="row min-vw-100 d-flex justify-content-center darkblue-bg-snowmasher" style="height: 2em;">
-  <a class="text-white" href="/">INICIO</a>
-</div>
-
-<div class="row min-vw-100 d-flex justify-content-center">
-  <img src="../../assets/img/errors/404.gif">
-</div>
-
-<div class="row">
-  <app-footer class="min-vw-100 "></app-footer>
+<div class="container-fluid p-0 d-flex justify-content-center">
+  <img class="img img-fluid" src="../../assets/img/errors/404.gif">
 </div>
