--- a/src/app/GrupoGeneral/info-bar/info-bar.component.html
+++ b/src/app/GrupoGeneral/info-bar/info-bar.component.html
@@ -2,7 +2,7 @@
 
   <!-- Imagen -->
   <div class="col col-md-3 col-lg-2 d-none d-md-flex justify-content-center">
-    <img *ngIf="asociacion.url_img" class="img img-responsive img-thumbnail" style="margin: 1rem; margin-left: 3rem;"
+    <img *ngIf="asociacion.url_img" class="img img-fluid img-thumbnail" style="margin: 1rem; margin-left: 3rem;"
       src="{{ asociacion.url_img }}">
   </div>
 
