--- a/src/app/GrupoLogin/login/login.component.html
+++ b/src/app/GrupoLogin/login/login.component.html
@@ -26,14 +26,14 @@
             </div>
           </div>
 
+          <div class="alert alert-danger mt-2"  style="display: none;" role="alert">
+            ¡Ha ocurrido un error!
+          </div>
+
           <!-- Botones inferiores -->
           <div class="mb-3 d-flex justify-content-between">
-            <a href="" style="font-size: 0.9em;">Olvidé mi contraseña</a>
-
-            <div class="d-flex flex-column-reverse flex-lg-row">
               <a class="mt-3 mt-lg-0 mr-lg-4" routerLink="/registerUser">Registrarse</a>
               <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Entrar</button>
-            </div>
           </div>
         </form>
       </div>
