--- a/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/asociacion-selected/asociacion-selected.component.html
@@ -5,7 +5,7 @@
   <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
 
-<div class="row">
+<div class="container-fluid">
   <div class="container mt-4 border darkblue-border-snowmasher" style="min-height: 20em;">
     <div class="row darkblue-bg-snowmasher text-light p-2" style="min-height: 5em;">
       <div class="col-6  d-flex flex-column">
@@ -69,6 +69,6 @@ aria-hidden="true">
   <a routerLink="/panel/adminAsoc" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
-<div class="row">
-  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
+<div class="footer container-fluid p-0 ">
+  <app-footer class="col p-0"></app-footer>
 </div>
