--- a/src/app/GrupoPanelUsuario/action-buttons-adm/action-buttons-adm.component.html
+++ b/src/app/GrupoPanelUsuario/action-buttons-adm/action-buttons-adm.component.html
@@ -1,16 +1,22 @@
 <div class="container-fluid mt-3 d-sm-flex flex-wrap">
-  <a routerLink="./adminMod" class="col col-md-4 modAdmAction">
+  <a routerLink="./adminMod" class="col col-md-6 modAdmAction">
     <h2>Administrar moderadores</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminModUser.png">
   </a>
 
-  <a routerLink="./adminAsoc" class="col col-md-4 modAdmAction">
+  <a routerLink="./adminAsoc" class="col col-md-6 modAdmAction">
     <h2>Administrar asociaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminAsoc.png">
   </a>
 
-  <a routerLink="./adminPost" class="col col-md-4 modAdmAction">
+  <a routerLink="./adminPost" class="col col-md-6 modAdmAction">
     <h2>Administrar publicaciones</h2>
     <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/adminPost.png">
+  </a>
+
+  <!-- Boton config -->
+  <a routerLink="./config" class="col col-sm-6 modAdmAction">
+    <h2>Configuración</h2>
+    <img class="img-fluid" style="height: 40%; width: auto;" src="../../assets/img/icons/config.png">
   </a>
 </div>
